; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_lock.c_lock_delay_default_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_lock.c_lock_delay_default_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_delay_config = type { i32, i32 }

@mp_ncpus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lock_delay_default_init(%struct.lock_delay_config* %0) #0 {
  %2 = alloca %struct.lock_delay_config*, align 8
  store %struct.lock_delay_config* %0, %struct.lock_delay_config** %2, align 8
  %3 = load %struct.lock_delay_config*, %struct.lock_delay_config** %2, align 8
  %4 = getelementptr inbounds %struct.lock_delay_config, %struct.lock_delay_config* %3, i32 0, i32 0
  store i32 1, i32* %4, align 4
  %5 = load i32, i32* @mp_ncpus, align 4
  %6 = call i32 @lock_roundup_2(i32 %5)
  %7 = mul nsw i32 %6, 256
  %8 = load %struct.lock_delay_config*, %struct.lock_delay_config** %2, align 8
  %9 = getelementptr inbounds %struct.lock_delay_config, %struct.lock_delay_config* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.lock_delay_config*, %struct.lock_delay_config** %2, align 8
  %11 = getelementptr inbounds %struct.lock_delay_config, %struct.lock_delay_config* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp sgt i32 %12, 32678
  br i1 %13, label %14, label %17

14:                                               ; preds = %1
  %15 = load %struct.lock_delay_config*, %struct.lock_delay_config** %2, align 8
  %16 = getelementptr inbounds %struct.lock_delay_config, %struct.lock_delay_config* %15, i32 0, i32 1
  store i32 32678, i32* %16, align 4
  br label %17

17:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @lock_roundup_2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
